Fixed display on small screens

--- a/src/main/webapp/app/overview/visualizations/exercise-scores-chart/exercise-scores-chart.component.scss
+++ b/src/main/webapp/app/overview/visualizations/exercise-scores-chart/exercise-scores-chart.component.scss
@@ -4,7 +4,8 @@ exercises
 */
 
 .chart-wrapper {
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
     overflow-x: auto;
 }
 
